target/generated-sources/antlr4/DataLang/DataLang/DataLangParser.java
// Generated from DataLang.g4 by ANTLR 4.4
package DataLang.DataLang;
 
	import java.util.Map;
	import java.util.HashMap;
	import java.util.List;
	import java.util.ArrayList;
	import lang.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DataLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__5=1, T__4=2, T__3=3, T__2=4, T__1=5, T__0=6, PRINT=7, FOR=8, VECTOR=9, 
		MATRIX=10, STACK=11, NEW=12, PUSH=13, POP=14, INT_TYPE=15, BOOLEAN_TYPE=16, 
		STRING_TYPE=17, FLOAT_TYPE=18, DOUBLE_TYPE=19, INT32_TYPE=20, INT64_TYPE=21, 
		LONG_TYPE=22, IF=23, ELSE_IF=24, ELSE=25, TERNARY=26, ID=27, INT=28, FLOAT_LITERAL=29, 
		BOOLEAN_LITERAL=30, STRING_LITERAL=31, ADDITIVE_OPERATOR=32, MULTIPLICATIVE_OPERATOR=33, 
		MODULO=34, OPEN_BRACKET=35, CLOSE_BRACKET=36, OPEN_BRACE=37, CLOSE_BRACE=38, 
		OPEN_PAREN=39, CLOSE_PAREN=40, COMMA=41, ASSIGN=42, LOGICAL_AND=43, LOGICAL_OR=44, 
		LOGICAL_NOT=45, RELATIONAL_OPERATOR=46, EQUALITY_OPERATOR=47, SEMICOLON=48, 
		COLON=49, WS=50, DOT=51;
	public static final String[] tokenNames = {
		"<INVALID>", "'<='", "'!='", "'>='", "'=='", "'<'", "'>'", "'print'", 
		"'for'", "'vector'", "'matrix'", "'stack'", "'new'", "'push'", "'pop'", 
		"'int'", "'boolean'", "'str'", "'float'", "'double'", "'int32'", "'int64'", 
		"'long'", "'if'", "'else if'", "'else'", "'?'", "ID", "INT", "FLOAT_LITERAL", 
		"BOOLEAN_LITERAL", "STRING_LITERAL", "ADDITIVE_OPERATOR", "MULTIPLICATIVE_OPERATOR", 
		"'%'", "'['", "']'", "'{'", "'}'", "'('", "')'", "','", "'='", "'&&'", 
		"'||'", "'!'", "RELATIONAL_OPERATOR", "EQUALITY_OPERATOR", "';'", "':'", 
		"WS", "'.'"
	};
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_ternaryExpression = 2, RULE_conditionalExpression = 3, 
		RULE_printStatement = 4, RULE_expressionList = 5, RULE_ifStatement = 6, 
		RULE_forLoop = 7, RULE_initialization = 8, RULE_condition = 9, RULE_update = 10, 
		RULE_variableDeclaration = 11, RULE_variableReference = 12, RULE_elementList = 13, 
		RULE_vectorDeclaration = 14, RULE_matrixElementList = 15, RULE_matrixDeclaration = 16, 
		RULE_matrixContent = 17, RULE_matrixRow = 18, RULE_stackDeclaration = 19, 
		RULE_pushOperation = 20, RULE_popOperation = 21, RULE_relationalOperator = 22, 
		RULE_expressionStatement = 23, RULE_expression = 24, RULE_logicalOrExpression = 25, 
		RULE_logicalAndExpression = 26, RULE_logicalNotExpression = 27, RULE_additiveExpression = 28, 
		RULE_multExpression = 29, RULE_atom = 30, RULE_scalarType = 31, RULE_type = 32, 
		RULE_size = 33, RULE_numRows = 34, RULE_numCols = 35, RULE_vectorExpression = 36, 
		RULE_matrixExpression = 37, RULE_elements = 38, RULE_matrixElements = 39, 
		RULE_element = 40, RULE_matrixElement = 41;
	public static final String[] ruleNames = {
		"program", "statement", "ternaryExpression", "conditionalExpression", 
		"printStatement", "expressionList", "ifStatement", "forLoop", "initialization", 
		"condition", "update", "variableDeclaration", "variableReference", "elementList", 
		"vectorDeclaration", "matrixElementList", "matrixDeclaration", "matrixContent", 
		"matrixRow", "stackDeclaration", "pushOperation", "popOperation", "relationalOperator", 
		"expressionStatement", "expression", "logicalOrExpression", "logicalAndExpression", 
		"logicalNotExpression", "additiveExpression", "multExpression", "atom", 
		"scalarType", "type", "size", "numRows", "numCols", "vectorExpression", 
		"matrixExpression", "elements", "matrixElements", "element", "matrixElement"
	};

	@Override
	public String getGrammarFileName() { return "DataLang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, Object> symbolTable = new HashMap<String, Object>();

	public DataLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DataLangParser.EOF, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84); statement();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << FOR) | (1L << VECTOR) | (1L << MATRIX) | (1L << STACK) | (1L << INT_TYPE) | (1L << BOOLEAN_TYPE) | (1L << STRING_TYPE) | (1L << FLOAT_TYPE) | (1L << DOUBLE_TYPE) | (1L << INT32_TYPE) | (1L << INT64_TYPE) | (1L << LONG_TYPE) | (1L << IF) | (1L << ID) | (1L << INT) | (1L << FLOAT_LITERAL) | (1L << BOOLEAN_LITERAL) | (1L << STRING_LITERAL) | (1L << OPEN_PAREN) | (1L << LOGICAL_NOT))) != 0) );
			setState(89); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ASTNode node;
		public VariableDeclarationContext variableDeclaration;
		public VectorDeclarationContext vectorDeclaration;
		public MatrixDeclarationContext matrixDeclaration;
		public StackDeclarationContext stackDeclaration;
		public PushOperationContext pushOperation;
		public PopOperationContext popOperation;
		public ForLoopContext forLoop;
		public IfStatementContext ifStatement;
		public PrintStatementContext printStatement;
		public ExpressionStatementContext expressionStatement;
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public VectorDeclarationContext vectorDeclaration() {
			return getRuleContext(VectorDeclarationContext.class,0);
		}
		public MatrixDeclarationContext matrixDeclaration() {
			return getRuleContext(MatrixDeclarationContext.class,0);
		}
		public PushOperationContext pushOperation() {
			return getRuleContext(PushOperationContext.class,0);
		}
		public StackDeclarationContext stackDeclaration() {
			return getRuleContext(StackDeclarationContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public PopOperationContext popOperation() {
			return getRuleContext(PopOperationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(121);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91); ((StatementContext)_localctx).variableDeclaration = variableDeclaration();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).variableDeclaration.node;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94); ((StatementContext)_localctx).vectorDeclaration = vectorDeclaration();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).vectorDeclaration.node;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97); ((StatementContext)_localctx).matrixDeclaration = matrixDeclaration();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).matrixDeclaration.node;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100); ((StatementContext)_localctx).stackDeclaration = stackDeclaration();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).stackDeclaration.node;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(103); ((StatementContext)_localctx).pushOperation = pushOperation();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).pushOperation.node;
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(106); ((StatementContext)_localctx).popOperation = popOperation();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).popOperation.node;
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(109); ((StatementContext)_localctx).forLoop = forLoop();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).forLoop.node;
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(112); ((StatementContext)_localctx).ifStatement = ifStatement();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).ifStatement.node;
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(115); ((StatementContext)_localctx).printStatement = printStatement();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).printStatement.node;
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(118); ((StatementContext)_localctx).expressionStatement = expressionStatement();
				((StatementContext)_localctx).node =  ((StatementContext)_localctx).expressionStatement.node;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TernaryExpressionContext extends ParserRuleContext {
		public ASTNode node;
		public ConditionalExpressionContext c;
		public ExpressionContext t;
		public ExpressionContext f;
		public ConditionalExpressionContext conditionalExpression() {
			return getRuleContext(ConditionalExpressionContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DataLangParser.COLON, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode TERNARY() { return getToken(DataLangParser.TERNARY, 0); }
		public TernaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ternaryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).enterTernaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).exitTernaryExpression(this);
		}
	}

	public final TernaryExpressionContext ternaryExpression() throws RecognitionException {
		TernaryExpressionContext _localctx = new TernaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ternaryExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); ((TernaryExpressionContext)_localctx).c = conditionalExpression();
			setState(129);
			_la = _input.LA(1);
			if (_la==TERNARY) {
				{
				setState(124); match(TERNARY);
				setState(125); ((TernaryExpressionContext)_localctx).t = expression();
				setState(126); match(COLON);
				setState(127); ((TernaryExpressionContext)_localctx).f = expression();
				}
			}


			        ((TernaryExpressionContext)_localctx).node =  (((TernaryExpressionContext)_localctx).t.node != null && ((TernaryExpressionContext)_localctx).f.node != null) ?
			            new TernaryExpressionNode(((TernaryExpressionContext)_localctx).c.node, ((TernaryExpressionContext)_localctx).t.node, ((TernaryExpressionContext)_localctx).f.node) :
			            ((TernaryExpressionContext)_localctx).c.node;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalExpressionContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).enterConditionalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).exitConditionalExpression(this);
		}
	}

	public final ConditionalExpressionContext conditionalExpression() throws RecognitionException {
		ConditionalExpressionContext _localctx = new ConditionalExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_conditionalExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionListContext expressionList;
		public TerminalNode SEMICOLON() { return getToken(DataLangParser.SEMICOLON, 0); }
		public TerminalNode PRINT() { return getToken(DataLangParser.PRINT, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(DataLangParser.CLOSE_PAREN, 0); }
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public TerminalNode OPEN_PAREN() { return getToken(DataLangParser.OPEN_PAREN, 0); }
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).enterPrintStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).exitPrintStatement(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_printStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(PRINT);
			setState(136); match(OPEN_PAREN);
			setState(137); ((PrintStatementContext)_localctx).expressionList = expressionList();
			setState(138); match(CLOSE_PAREN);
			setState(139); match(SEMICOLON);

			        ((PrintStatementContext)_localctx).node =  new PrintStatementNode(((PrintStatementContext)_localctx).expressionList.list);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionListContext extends ParserRuleContext {
		public List<ASTNode> list;
		public ExpressionContext expr;
		public List<TerminalNode> COMMA() { return getTokens(DataLangParser.COMMA); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(DataLangParser.COMMA, i);
		}
		public ExpressionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).enterExpressionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).exitExpressionList(this);
		}
	}

	public final ExpressionListContext expressionList() throws RecognitionException {
		ExpressionListContext _localctx = new ExpressionListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expressionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); ((ExpressionListContext)_localctx).expr = expression();
			((ExpressionListContext)_localctx).list =  new ArrayList<>(); _localctx.list.add(((ExpressionListContext)_localctx).expr.node);
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(144); match(COMMA);
				setState(145); ((ExpressionListContext)_localctx).expr = expression();
				_localctx.list.add(((ExpressionListContext)_localctx).expr.node);
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext condExpr;
		public StatementContext stmt;
		public ExpressionContext elseIfCond;
		public StatementContext elseIfStmt;
		public StatementContext elseStmt;
		public TerminalNode CLOSE_PAREN(int i) {
			return getToken(DataLangParser.CLOSE_PAREN, i);
		}
		public TerminalNode OPEN_PAREN(int i) {
			return getToken(DataLangParser.OPEN_PAREN, i);
		}
		public TerminalNode ELSE() { return getToken(DataLangParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(DataLangParser.IF, 0); }
		public List<TerminalNode> CLOSE_BRACE() { return getTokens(DataLangParser.CLOSE_BRACE); }
		public List<TerminalNode> ELSE_IF() { return getTokens(DataLangParser.ELSE_IF); }
		public TerminalNode ELSE_IF(int i) {
			return getToken(DataLangParser.ELSE_IF, i);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode CLOSE_BRACE(int i) {
			return getToken(DataLangParser.CLOSE_BRACE, i);
		}
		public List<TerminalNode> OPEN_PAREN() { return getTokens(DataLangParser.OPEN_PAREN); }
		public List<TerminalNode> CLOSE_PAREN() { return getTokens(DataLangParser.CLOSE_PAREN); }
		public List<TerminalNode> OPEN_BRACE() { return getTokens(DataLangParser.OPEN_BRACE); }
		public TerminalNode OPEN_BRACE(int i) {
			return getToken(DataLangParser.OPEN_BRACE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataLangListener ) ((DataLangListener)listener).exitIfStatement(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153); match(IF);
			setState(154); match(OPEN_PAREN);
			setState(155); ((IfStatementContext)_localctx).condExpr = expression();
			setState(156); match(CLOSE_PAREN);
			setState(157); match(OPEN_BRACE);
			setState(158); ((IfStatementContext)_localctx).stmt = statement();
			setState(159); match(CLOSE_BRACE);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSE_IF) {
				{
				{
				setState(160); match(ELSE_IF);
				setState(161); match(OPEN_PAREN);
				setState(162); ((IfStatementContext)_localctx).elseIfCond = expression();
				setState(163); match(CLOSE_PAREN);
				setState(164); match(OPEN_BRACE);
				setState(165); ((IfStatementContext)_localctx).elseIfStmt = statement();
				setState(166); match(CLOSE_BRACE);
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(178);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(173); match(ELSE);
				setState(174); match(OPEN_BRACE);
				setState(175); ((IfStatementContext)_localctx).elseStmt = statement();
				setState(176); match(CLOSE_BRACE);
				}
			}

